--- a/app/src/main/res/layout/activity_reg_event.xml
+++ b/app/src/main/res/layout/activity_reg_event.xml
@@ -13,7 +13,7 @@
         android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Registro Niños"
+        android:text="Registro de Eventos"
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
@@ -64,10 +64,10 @@
 
         <!-- Botón Actualizar -->
         <Button
-            android:id="@+id/btnActualizar"
+            android:id="@+id/btnGuardar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Actualizar"
+            android:text="Guardar"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"/>
 
